# obelisk-examples

./: .gitignore  README.md  setup.sh
.devcontainer/gpu/: devcontainer.json
docker/: .env  Dockerfile  Dockerfile.gpu  Dockerfile.nogpu  docker-compose-no-gpu.yml  docker-compose.yml
dummy_bot_cpp/: CMakeLists.txt  README.md  dummy_bot_cpp.yaml  package.xml  readme.md  requirements.txt
dummy_bot_cpp/src/: mujoco_sim.cpp
dummy_utils/: CMakeLists.txt  package.xml
dummy_utils/src/: message_counter.cpp
viz_example/: package.xml  readme.md  setup.cfg  setup.py
viz_example/launch/: viz_bringup.launch.py
viz_example/viz_example/: state_publisher.py
